--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "nodemailer": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+    
+
   },
+  "proxy": "http://localhost:3030",
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
